update google api key

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <title>Google Map</title>             
-        <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyJb-fYOm7pBFzpCspMrRPlmXWtACM6J4&callback=myMap"></script>
         <script src="js/jquery-1.12.3.min.js"></script>     
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
+        <link rel="stylesheet" href="css/main.css" type="text/css" />	
         <script>
             $(document).ready(function () {
                 var mapOptions = {
@@ -483,7 +483,8 @@
                  */
 
             }); // document ready
-        </script>    
+        </script>
+		<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>		-->
     </head>
     <body>      
         <div id="map"></div>      
